--- a/10MVC_USER/.settings/org.eclipse.wst.common.component
+++ b/10MVC_USER/.settings/org.eclipse.wst.common.component
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
             
     
-    <wb-module deploy-name="09MVC_INIT">
+    <wb-module deploy-name="10MVC_USER">
                         
         
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
@@ -10,8 +10,8 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
                         
         
-        <property name="java-output-path" value="/09MVC_INIT/build/classes"/>
-        <property name="context-root" value="09MVC_INIT"/>
+        <property name="java-output-path" value="/10MVC_USER/build/classes"/>
+        <property name="context-root" value="10MVC_USER"/>
                     
     
     </wb-module>
